assets/css/style.css
/* ... */
/* ----------------------------------------Navbar/header */

.er-title {
    margin: auto;
}

.navbar {
    padding: 0px 0px;
}

nav {
    min-height: 4em;
    background-color: rgba(60, 60, 60);
    color: white;
}

.er-brand {
    margin-left: 25px;
    color: rgba(255, 255, 255, 0.2);
}

.er-brand-link {
    color: rgba(255, 255, 255, 0.8);
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.7);
    font-size: 125%;
    text-decoration: none;
}

.er-brand-link a {
    color: rgba(255, 255, 255, 0.8)!important;
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.2);
}

.er-brand-link a:hover {
    color: rgba(255, 255, 255)!important;
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.1);
}

.er-brand-link a:active {
    color: rgba(255, 255, 255, 0.2)!important;
    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5)!important;
}

.er-nav-icons {
    margin: auto;
}

.er-menu-icon {
    font-size: 2em;
    letter-spacing: 0.50em;
    margin: auto;
}

.er-menu-icon a {
    color: rgba(255, 255, 255, 0.8);
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.2);
}

.er-menu-icon-arrow a {
    color: rgba(255, 255, 255, 0.4);
}

.er-menu-icon a:hover {
    color: rgba(255, 255, 255)!important;
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.1);
}

.er-menu-icon a:active {
    color: rgba(255, 255, 255, 0.2)!important;
    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5);
}

.er-nav-boembep {
    position: absolute;
    left: 50vw;
    transform: translateX(-50%);
    letter-spacing: 8px;
    font-weight: 300;
    color: rgba(255, 255, 255);
}

.er-nav-boembep h2 {
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.9);
}

/* ----------------------------------------Section-colors */

#frontpage {
    scroll-snap-align: none;
}

#info {
    background-color: rgba(207, 190, 160, 0.92);
}

#music {
    background-color: rgba(207, 190, 160, 0.92);
}

#download {
    background-color: rgba(207, 190, 160, 0.92);
}

#art {
    background-color: rgba(207, 190, 160, 0.92);
}

#video {
    background-color: rgba(207, 190, 160, 0.92);
}

/* ----------------------------------------Section template with scroll snapping to top */

.er-content {
    min-height: 100vh;
    scroll-snap-align: start;
    width: 100%;
    margin: 0;
}

/* ----------------------------------------Section content */

.er-content-wrapper {
    padding-top: 3em;
    min-height: 60vh;
    margin-top: auto;
    margin-bottom: auto;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

/* ----------------------------------------Section Content building blocks */

.er-content-block {
    margin: 2em 0 2em 0;
    width: 100%;
}

.er-content-circle {
    width: 66%;
    height: auto;
    margin: auto;
    overflow: hidden;
    border-radius: 50%;
}

.er-content-square {
    padding: 15px;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(60, 60, 60, 0.1);
    box-shadow: 0px 0px 25px rgba(60, 60, 60);
}

/* ----------------------------------------Section header and footer */

.er-content-header {
    margin-top: 5em;
    margin-bottom: 2em;
    text-align: right;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    transform: rotate(0deg);
    box-shadow: 1px 1px 1px #ffffffa1;
    background-color: rgba(255, 255, 255, 0.61);
}

.er-header-text {
    margin-right: 15px;
    font-family: 'Allerta Stencil', sans-serif;
    font-weight: 100;
    font-size: 1.5em;
    letter-spacing: 0px;
    text-shadow: 1px 1px 1px #ffffffa1;
    color: rgba(207, 190, 160);
}

.er-content-footer {
    text-align: left;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    margin-top: 0em;
    margin-bottom: 2em;
    box-shadow: 5px 5px 5px #a59172;
    transform: rotate(-1deg);
    background-color: rgba(0, 0, 0, 0.7);
}

.er-footer-text {
    margin-right: 15px;
    margin-left: 15px;
    font-family: 'Allerta Stencil', sans-serif;
    font-size: 1.5em;
    font-weight: 100;
    letter-spacing: 0px;
    text-shadow: 1px 1px 2px #000000a1;
    color: rgba(207, 190, 160);
}

/* ----------------------------------------Overlay section navigation */

.er-centerscreen {
    position: absolute;
    top: 5.5em;
    right: 0vw;
    color: rgba(60, 60, 60, 0.4);
}

.er-centerscreen a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(60, 60, 60, 0.3);
}

.er-centerscreen a:hover {
    color: rgba(60, 60, 60);
}

.er-centerscreen a:active {
    color: rgba(60, 60, 60, 0.1);
}

.er-arrow {
    width: 2vw;
    position: absolute;
    right: 2vw;
    text-align: center;
    color: rgba(178, 43, 43, 0.7);
}

.er-arrow a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(178, 43, 43, 0.6);
}

.er-arrow a:hover {
    font-size: 110%;
    color: rgba(178, 43, 43, 0.9);
}

.er-arrow a:active {
    color: rgba(60, 60, 60, 0.1);
}

.er-arrow-up {
    top: 84vh;
}

.er-arrow-down {
    top: 92vh;
}

.er-arrow-frontpage {
    top: 84vh;
}

/* ----------------------------------------Social icons left side */

.er-social-side {}

.er-social {
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    color: rgba(60, 60, 60, 0.7);
}

.er-social a {
    transition-property: all;
    transition-duration: 150ms;
    transition-timing-function: ease-in-out;
    color: rgba(60, 60, 60, 0.8);
}

.er-social a:active {
    color: rgba(60, 60, 60, 0.1)!important;
}

#er-social-first {
    top: 13vh;
}

#er-social-first a:hover {
    color: rgba(61, 91, 153);
}

#er-social-second {
    top: 26vh;
}

#er-social-second a:hover {
    color: rgba(224, 80, 95);
}

#er-social-third {
    top: 39vh
}

#er-social-third a:hover {
    color: rgb(225, 85, 0);
}

#er-social-fourth {
    top: 52vh;
}

#er-social-fourth a:hover {
    color: rgba(255, 0, 0);
}

#er-social-fifth {
    top: 81vh;
}
/* ... */

